--- a/src/animation.css
+++ b/src/animation.css
@@ -2,6 +2,14 @@
   color: #0284c7 !important;
 }
 
+.container-icon:hover .html {
+  color: #e34f26 !important;
+}
+
+.container-icon:hover .javascript {
+  color: #f7df1e !important;
+}
+
 
 .circle {
   position: relative;
@@ -26,6 +34,67 @@
 
     #canvas{
       width: 400px !important;
-      height: 400px !important;
+      height: 350px !important;
       
     }
+
+.astronaut{
+  padding-top: 20px;
+  scale: .5;
+  animation: flotate 3s  infinite;
+}
+
+.rotate{
+  
+  animation: rotate 3s infinite alternate;
+}
+
+@keyframes flotate{
+  
+  0% {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, -20px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+@keyframes rotate{
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(10deg);
+  }
+}
+
+
+/* scroll bar  */
+
+
+/* Estilos de la barra de desplazamiento */
+::-webkit-scrollbar {
+  width: 8px; /* Ancho de la barra */
+  height: 8px; /* Altura de la barra */
+  border-radius: 5px; /* Bordes redondeados */
+}
+
+/* Estilos del riel de la barra de desplazamiento */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color de fondo */
+}
+
+/* Estilos del pulgar de la barra de desplazamiento */
+::-webkit-scrollbar-thumb {
+  background-color: #999; /* Color del pulgar */
+  border-radius: 5px; /* Bordes redondeados */
+}
+
+/* Estilos del pulgar de la barra de desplazamiento cuando se está arrastrando */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Color del pulgar cuando se pasa el ratón */
+}
+
