--- a/src/animation.css
+++ b/src/animation.css
@@ -1,3 +1,80 @@
+body{
+  box-sizing: border-box !important;
+  width: 100% !important;
+}
+
+@media (max-width: 767px) {
+  .nav-menu {
+    display: none;
+    transition: all 2s ease-in-out;
+    opacity: 0;
+  }
+  
+  .nav-menu-show {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(213, 213, 213);
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    transition: all 1s ease-in-out;
+  }
+  
+  .nav-toggle {
+    display: block;
+  }
+
+  .nav-close-btn-hide {
+    display: none;
+  }
+  
+  .nav-close-btn-show {
+    display: block;
+  }
+  
+ 
+  
+  svg {
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  svg:not(:root) {
+    overflow: hidden;
+  }
+  
+  /* Estilos para la x */
+  svg.x {
+    transform: rotate(45deg);
+  }
+  
+  svg.x line {
+    stroke: #000000;
+    stroke-width: 2;
+    stroke-linecap: round;
+  }
+  
+  /* Estilos para el icono hamburguesa */
+  svg.hamburguer {
+    fill: #000000;
+  }
+  
+  svg.hamburguer path {
+    fill-rule: evenodd;
+  }
+  
+}
+
+
+
+
+
+
 .container-icon:hover .icon {
   color: #0284c7 !important;
 }
@@ -70,6 +147,27 @@
     transform: rotate(10deg);
   }
 }
+
+
+@media screen and (max-width: 750px) {
+  .circle{
+    display: none;
+  }
+  .rotate{
+    animation: none;
+  }
+  .rotate img {
+    position: relative;
+    top: -40%;
+    left: 0%;
+
+  }
+
+
+}
+
+
+
 
 
 /* scroll bar  */
