--- a/src/animation.css
+++ b/src/animation.css
@@ -1,6 +1,8 @@
 body{
   box-sizing: border-box !important;
   width: 100% !important;
+  background-color: #f1f1f1;
+  
 }
 
 @media (max-width: 767px) {
@@ -16,7 +18,7 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(213, 213, 213);
+    background-color: rgb(251, 251, 251);
     z-index: 9999;
     display: flex;
     flex-direction: column;
@@ -26,47 +28,7 @@ body{
     transition: all 1s ease-in-out;
   }
   
-  .nav-toggle {
-    display: block;
-  }
-
-  .nav-close-btn-hide {
-    display: none;
-  }
   
-  .nav-close-btn-show {
-    display: block;
-  }
-  
- 
-  
-  svg {
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  svg:not(:root) {
-    overflow: hidden;
-  }
-  
-  /* Estilos para la x */
-  svg.x {
-    transform: rotate(45deg);
-  }
-  
-  svg.x line {
-    stroke: #000000;
-    stroke-width: 2;
-    stroke-linecap: round;
-  }
-  
-  /* Estilos para el icono hamburguesa */
-  svg.hamburguer {
-    fill: #000000;
-  }
-  
-  svg.hamburguer path {
-    fill-rule: evenodd;
-  }
   
 }
 
@@ -85,19 +47,6 @@ body{
 
 .container-icon:hover .javascript {
   color: #f7df1e !important;
-}
-
-
-.circle {
-  position: relative;
-  top: -25%;
-  left: 75%;
-  bottom: 0;
-  width: 150px;
-  height: 150px;
-  background-color: #0284c7;
-  border-radius: 50%;
-  animation: spin 6s linear infinite;
 }
 
 
